# camera-linux-qt

./: .gitignore  Audio.cpp  Audio.h  CMakeLists.txt  Camera.cpp  Camera.h  Capture.cpp  Capture.h  Frame.cpp  Frame.h  Loop.cpp  Loop.h  Play.cpp  Play.h  Pulse.cpp  Pulse.h  QAudioInfo.cpp  QAudioInfo.h  QJsonWebToken.cpp  QJsonWebToken.h  QrCode.cpp  QrCode.h  Queue.cpp  Queue.h  README.md  Show.cpp  Show.h  Stream.cpp  Stream.h  Surface.cpp  Surface.h  Video.cpp  Video.h  camera_ru_RU.ts  main.cpp  main.qrc  main.ui
